[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyuqspice"
version = "0.0.1"
description = "Tools for uncertainty quantification and LTSpice simulation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Karol Niewiadomski", email = "niewiadomski.k@wp.pl"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=1.4.3",
    "numpy>=1.20.0",
    "openturns>=1.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/karylsienn/PyUQSpice"
Repository = "https://github.com/karylsienn/PyUQSpice"
Issues = "https://github.com/karylsienn/PyUQSpice/issues"

[tool.setuptools.packages.find]
include = ["pyuqspice*"]
